[package]
name = "pure_wav"
description = "A library to parse .wav files"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/ChocolateLoverRaj/pure_wav"
authors = ["Rajas Paranjpe"]
license = "AGPL-3.0-or-later"
categories = ["no-std", "embedded", "no-std::no-alloc", "multimedia::audio", "parsing"]

[dependencies]
zerocopy = { version = "0.8.31", features = ["derive"] }
