[package]
name = "pure_wav"
description = "A library to parse .wav files"
version = "2.0.0"
edition = "2024"
repository = "https://github.com/ChocolateLoverRaj/pure_wav"
authors = ["Rajas Paranjpe"]
license = "AGPL-3.0-or-later"
categories = ["no-std", "embedded", "no-std::no-alloc", "multimedia::audio", "parsing"]
include = ["**/*.rs"]

[dependencies]
pure_riff = "1.0.0"
zerocopy = { version = "0.8.47", features = ["derive"] }

[dev-dependencies]
rodio = { version = "0.22.2", default-features = true, features = ["64bit", "playback"] }
